[[moor|]]| → [[moor (meens)|]]|

--- a/Oma.mw
+++ b/Oma.mw
@@ -1,4 +1,4 @@
-ne '''Oma''' of '''grotmoo''' (mangs oet esprökn as ''gropmoo'' en mangs as ''grotmoo'') is ne [[Vrouw|vrouwe]] den at de [[moor|moo]] is van oew [[voar|vaa]] of moo. Zinnen [[kearl]] of leawnsgezel is oewn [[opa|grotvaa]]. Iederene hef veer geneetise grootooldn. n Naam oma (in alle Tweantse lokale variaantn) wörd ook vake as skeeldnaam gebroekt vuur meakns of vrouweleu dee't nöalt, of dee't eulder kuiert as wat ze beent, of vuur ene den at n aander (onterecht) de wacht anzeg.
+ne '''Oma''' of '''grotmoo''' (mangs oet esprökn as ''gropmoo'' en mangs as ''grotmoo'') is ne [[Vrouw|vrouwe]] den at de [[moor (meens)|moo]] is van oew [[voar|vaa]] of moo. Zinnen [[kearl]] of leawnsgezel is oewn [[opa|grotvaa]]. Iederene hef veer geneetise grootooldn. n Naam oma (in alle Tweantse lokale variaantn) wörd ook vake as skeeldnaam gebroekt vuur meakns of vrouweleu dee't nöalt, of dee't eulder kuiert as wat ze beent, of vuur ene den at n aander (onterecht) de wacht anzeg.
 
 De moo van ne grotmoo wörd oawergrotmoo eneumd. Den zin moo het bet-oawergrotmoo.
 
