--- a/Raandstad.mw
+++ b/Raandstad.mw
@@ -1,6 +1,6 @@
 '''Randstad''' kan wean:
 
-* [[Randstaad (gebeed)]]; et gebeed van en rundumme den Nederlaandsen steden Amsterdam, Almere, Utrecht, Rotterdam, Den Haag, Amersfoort, Dordrecht, Hilversum en Haarlem.
+* [[Raandstad (gebeed)]]; et gebeed van en rundumme den Nederlaandsen steden Amsterdam, Almere, Utrecht, Rotterdam, Den Haag, Amersfoort, Dordrecht, Hilversum en Haarlem.
 * [[Randstad Holding NV]]; ene van den grootsten uutzendbedrieve in de weald.
 * [[Randstad (omroop)]]; nen radio-omroop uut den Belgisiesen stad Mechelen.
 * [[Randstad (tiedskrift)]]; nen Nederlaands literair tiedskrift.
