[[Raandstad|]]| → [[Raandstad (gebeed)|]]|; [[Utrecht (stad)|Utrecht]] (stad); is dat ene Utrech (met 1 't') expres?

--- a/Utrecht_(provinsie).mw
+++ b/Utrecht_(provinsie).mw
@@ -21,7 +21,7 @@ ofbeelden =  [[Ofbeelding:Utrecht-Position.png|Ligging van de previnsie Utrech]]
 Kommissoares van Keunegin = [[Boele Staal|mr. B. (Boele) Staal]] |
 Webstee = [http://www.provincie-utrecht.nl www.provincie-utrecht.nl] |
 }} 
-'''Utrecht''' is met een [[oppervlakte]] van 1.449 km² de kleinste previnsie van [[Nederlaand|Nederlangd]] en 't het ongeveer 1,17 miljoen inwoeners. De previnsie Utrecht, waor de minsen 't dichtst op mekaor woenen, en dat centraol leit wordt meestal tot de [[Raandstad|Rangdstad]] erekend. De heufdstad is Utrecht. Dee stad was 't centrum van 't bisdom of [[Sticht Utrecht]], de veurloper van wat nong de previnsie Utrecht is. De tweede grote stad van de previnsie is [[Amesfoort]], de darde is [['t Veen|Veenendaol]]. Utrecht leit an de grens met [[Gelderlaand|Gelderlangd]], [[Zuud-Hollaand|Zuud-Hollangd]], [[Noord-Hollaand|Noord-Hollangd]] en [[Flevolaand|Flevolangd]]. 
+'''Utrecht''' is met een [[oppervlakte]] van 1.449 km² de kleinste previnsie van [[Nederlaand|Nederlangd]] en 't het ongeveer 1,17 miljoen inwoeners. De previnsie Utrecht, waor de minsen 't dichtst op mekaor woenen, en dat centraol leit wordt meestal tot de [[Raandstad (gebeed)|Rangdstad]] erekend. De heufdstad is [[Utrecht (stad)|Utrecht]]. Dee stad was 't centrum van 't bisdom of [[Sticht Utrecht]], de veurloper van wat nong de previnsie Utrecht is. De tweede grote stad van de previnsie is [[Amesfoort]], de darde is [['t Veen|Veenendaol]]. Utrecht leit an de grens met [[Gelderlaand|Gelderlangd]], [[Zuud-Hollaand|Zuud-Hollangd]], [[Noord-Hollaand|Noord-Hollangd]] en [[Flevolaand|Flevolangd]]. 
 
 In de plaotsen [[Bunsjoten]], [[Spaokenburg]], [[Leusden]] en Amesfoort worren oorspronklijk [[West-Veluws]]e en [[Eemlangds]]e dialecten espreuken.
 
