[[Raandstad]] → [[Raandstad (gebeed)|Raandstad]] (dat is [[Raandstad (gebeed)]])

--- a/Westlaauwers_Frais.mw
+++ b/Westlaauwers_Frais.mw
@@ -72,7 +72,7 @@ Frais is naauw verbonden aan baaide aandere [[Freesk|Fraise toaln]], t [[Selterf
 Frais wordt proat op vastelaand van de [[Nederlaand]]se provìnzie [[Fraislaand]], mit oetzöndern van de [[Stellingwarven|Stellenwaarven]] in zuudoosten, oostelk [[Kölmerlaand]] in noordoosten en [[Et Bildt|t Bilt]] (olle monden van [[Middelzee]]) in noorden. Op de [[Waddenaailanden]] wordt Frais proat op [[Schiermonnikoog|Schiermunksoog]] moar nait op [[Amelaand (eiland)|Amelaand]] en [[Vlielaand (eilaand)|Vlielaand]]. Op [[Terschelling (eilaand)|Schèlln]] wordt t allend proat op de oostelke en westelke oetìnden van t aailaand, moar nait in midden van Schèlln, in t gebied om [[Midslaand]] hìn. Wieder wordt t ook nog proat in n lutk paart van provìnzie [[Grunnen (provìnzie)|Grunnen]], van Fraise grèns tot de plakken [[Moarum]], [[De Wilp]] en [[De Penne (Grönnen)|De Penne]] tou.
 
 === Aantel sprekers ===
-Frais wordt in provìnzie Fraislaand as mouertoal proat deur 347.000 mìnsken, oftewel deur 55% van inwoner. In noaberske Grunnen wordt t proat deur sikkom 3.000 mìnsken. Boeten aaigens toalgebied wordt t proat deur sikkom 150.000 mìnsken in de rest van Nederlaand, veurnoamelk in [[Raandstad]], in stad [[Grunnen (stad)|Grunnen]] en in [[Noordoostpolder]]. En den is der nog de verrazzend grode Fraistoalege groep in t boetenlaand, dij schat wordt op 80.000 tot 100.000 mìnsken tou. Dat komt den oet op minimoal 600.000 Fraistoalegen. Doarnevven wordt Frais ook nog as twijde toal proat deur sikkom 110.000 van hoes oet nait-Fraistoalege inwoner van  provìnzie Fraislaand.
+Frais wordt in provìnzie Fraislaand as mouertoal proat deur 347.000 mìnsken, oftewel deur 55% van inwoner. In noaberske Grunnen wordt t proat deur sikkom 3.000 mìnsken. Boeten aaigens toalgebied wordt t proat deur sikkom 150.000 mìnsken in de rest van Nederlaand, veurnoamelk in [[Raandstad (gebeed)|Raandstad]], in stad [[Grunnen (stad)|Grunnen]] en in [[Noordoostpolder]]. En den is der nog de verrazzend grode Fraistoalege groep in t boetenlaand, dij schat wordt op 80.000 tot 100.000 mìnsken tou. Dat komt den oet op minimoal 600.000 Fraistoalegen. Doarnevven wordt Frais ook nog as twijde toal proat deur sikkom 110.000 van hoes oet nait-Fraistoalege inwoner van  provìnzie Fraislaand.
 
 === Toalbeheersen ===
 Van de sikkom 630.000 inwoner van de provìnzie Fraislaand kin 94% Frais verstoan, 74% Frais proaten, 65% Frais lezen en 17% Frais schrieven.
