--- a/Ut_quid_iubes_pusiole.mw
+++ b/Ut_quid_iubes_pusiole.mw
@@ -1,8 +1,8 @@
-'''Ut quid iubes pusiole''' (''Waorumme vraog ie mi'j te zingen?'') is een lied in tien varzen, eschreben deur de [[Saksen|Saksische]] monnik [[Gottschalk van Orbais]] (um-en-bi'j 803 - 868). Gottschalk verkondigden een varregaonde predestinatieleer en is daorumme veroordield tot lebenslange opsluting in 't klooster van [[Hautvilliers]]. Uut de lebensgeschiedenis van Gottschalk kömp een fel en oavergevulig mèense naor veuren.
+'''Ut quid iubes pusiole''' (''Waorumme vraog ie mi'j te zingen?'') is een lied in tien varzen, eschreven deur de [[Saksen|Saksische]] monnik [[Gottschalk van Orbais]] (ongeveer 803 - 868). Gottschalk verkondigden een varregaonde predestinatieleer en wördden daorumme veroordield töt levenslange opsluting in 't klooster van [[Hautvilliers]]. Uut de levensgeschiedenis van Gottschalk kömp een fel en barre gevulig mèense naor veuren.
 
-Gottschalk zol ''Ut quid iubes pusiole'' eschreben hebben toen as-e in [[Friuli]] ([[Italië]]) verbleef. Aandern geleuft det hi'j 't eschreben hef in 't klooster van Reichenau, 't eiland in het Bodenmeer daoras hi'j ezeten hef. De woorden ''intra mare'' zolden daor op wiezen.
+Gottschalk zol ''Ut quid iubes pusiole'' eschreven hebben toen as e in [[Friuli]] ([[Italië]]) verbleef. Aandern geleuft det hi'j 't eschreven hef in 't klooster van Reichenau, 't eilaand in het Bodenmeer daoras hi'j ezeten hef. De woorden ''intra mare'' zolden daor op wiezen.
 
-De melodie van 't lied is te vienden op een [[9e eeuw|negende-ieuws]] manuscript. Ze weet niet of Gottschalk de melodie zölf eschreben hef. 't Gebruuk van riem, zoas in ''Ut quid iubes pusiole'', kwam in die tied nog niet veule veur.
+De melodie van 't lied is te vienden op een [[9e eeuw|negende-ieuws]] manuscript. Ze weet niet of Gottschalk de melodie zölf eschreven hef. 't Gebruuk van riem, zoas in ''Ut quid iubes pusiole'', kwaamp in die tied nog niet veule veur.
 
 ==Tekst==
 Hier volgt de tekst van 't lied mit een vri'je Drèentse vertaling (epubliceerd in 't Drents Letterkundig Tiedschrift ''[[Roet]]'', harfst 2006; overeneumen mit toestemming van de vertaler).
@@ -189,7 +189,6 @@ Hier volgt de tekst van 't lied mit een vri'je Drèentse vertaling (epubliceerd 
 <br />
 
 ==Bronnen==
-
 * Alders, Hanny (1988), ''Waarom vraag je me te zingen...? Een levensgeschiedenis'', Conserve
 * Duemmler, Ernst (red.) (1886), ''Monumenta Germaniae Historica, Poetae Latini Aevi Carolini'', diel III
 * Schulte Nordholt, Jan Willem (1995), ''Waarom wil je dat ik zing?'', Boekmakerij Gert-Jan Buitink
