--- a/Verainde_Oostindiese_Komnij.mw
+++ b/Verainde_Oostindiese_Komnij.mw
@@ -1,8 +1,8 @@
 [[Ofbeelding:VOC.svg|100px|right|thumb|Logo van de VOC]]
-[[Ofbeelding:Nicolaes Visscher Indiae Orientalis.jpg|250px|right|thumb|17. aiwse koart van ''Oostinje'']]
 De '''Verainde Oostinjische Komnij''', ôfkört '''VOK''' ([[Nederlaands|Hollaands]]: ''Verenigde Oost-Indische Compagnie'' of ''VOC'') was n [[Nederlaands]] handelsverbond dij as doul haar de handel mit [[Oostinje]], t noudoagse [[Indonesie]], doudestieds n kolonie van [[Nederlaand]], tou regeln en aan tou pitjen. t Wör oprichten ien [[1602]] en is ien [[1798]] aan appelat kommen. De veurnoamste handelswoaren wazzen [[spaiserijen]] as [[peper]], [[gember]], [[kruudnoagel]] enzowieder. De VOK het de handeloaren, en doarmit ook Nederlaand, doudestieds veul riekdom boden en het der veur zörgd dat de Nederlanden internasjonoal mittelde, woar t laand vandoag aan dag nog aal profiet van het op ekonomisch en politiek gebied. De tied van de VOK wordt den ook wel de [[Golden Aiw]] (Hollaands: ''Gouden Eeuw'') nuimd. 
+[[Ofbeelding:Nicolaes Visscher Indiae Orientalis.jpg|left|thumb|17. aiwse koart van ''Oostinje'']]
 
-{{Commons|Category:Dutch East India Company}}
+{{Commonscat|Dutch East India Company}}
 {{begunke}}
 
 [[Kattegerie:Grunnegs artikel]]
