--- a/Beleg_van_Grol_(1595).mw
+++ b/Beleg_van_Grol_(1595).mw
@@ -20,6 +20,8 @@ Twee joare loater, in 1597 kwam Maurits weer noar Grol um het dizze kere wal in 
 == Rifferensies ==
 <references />
 
+{{commonscat|Siege of Groenlo 1595}}
+
 {{DEFAULTSORT:Grol #::::1595 Beleg}}
 [[Kattegerie:Tachtigjoarigen Oorlog]]
 [[Kattegerie:16e eeuw]]
