--- a/Europeeske_Uny.mw
+++ b/Europeeske_Uny.mw
@@ -79,7 +79,7 @@ De officiële taolen van de instituten van de Europese Unie bint:
 * [[Slowaaks]]
 * [[Spaons|Spaans]]
 |
-* [[Tsjechisch]]
+* [[Tsjechies]]
 * [[Zweeds|Zwèèds]]
 |
 * [[Iers-Gaelisch]] (sund 2007)
