--- a/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
+++ b/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
@@ -64,7 +64,7 @@ De stand van de ratificasie en ondertekening op 15 november 2006 (bron: <ref>[ht
 | [[Ofbeelding:Flag_of_Italy.svg|20px|left|Italië]] [[Italiën|Italië]] || 27-06-2000 || &nbsp; || &nbsp; || &nbsp;
 |----- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Croatia.svg|20px|left|Kroasië]] [[Kroasië]] || 05-11-1997 || 05-11-1997 || 01-03-1998
-| [[Hongaars]], [[Italiaans]], [[Oekraïens]], [[Roetheens]], Servisch, Slowaaks, [[Tsjechisch]]
+| [[Hongaars]], [[Italiaans]], [[Oekraïens]], [[Roetheens]], Servisch, Slowaaks, [[Tsjechies]]
 |----- style="background-color:#ffaaaa;"
 | [[Ofbeelding:Flag_of_Latvia.svg|20px|left|Letlaand]] [[Letlaand]] || &nbsp; || &nbsp; || &nbsp; || &nbsp;
 |----- style="background-color:#aaffaa;"
@@ -94,7 +94,7 @@ De stand van de ratificasie en ondertekening op 15 november 2006 (bron: <ref>[ht
 | [[Ofbeelding:Flag_of_Ukraine.svg|20px|left|Oekraïne]] [[Oekraïne]] || 02-05-1996 || 19-09-2005 || 01-01-2006 || ?
 |----- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Austria.svg|20px|left|Oostenriek]] [[Oostnriek|Oostenriek]] || 05-11-1992 || 28-06-2001 || 01-10-2001
-| Burgenlaandkroatisch, Hongaars, Romani, Sloveens, Slowaaks, Tsjechisch
+| Burgenlaandkroatisch, Hongaars, Romani, Sloveens, Slowaaks, Tsjechies
 |----- style="background-color:#ffffaa;"
 | [[Ofbeelding:Flag_of_Poland.svg|20px|left|Pole]] [[Pooln|Polen]] || 12-05-2003 || &nbsp; || &nbsp; || &nbsp;
 |----- style="background-color:#ffaaaa;"
@@ -113,7 +113,7 @@ De stand van de ratificasie en ondertekening op 15 november 2006 (bron: <ref>[ht
 | 01-01-2001 || Hongaars, Italiaans, Romani
 |----- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Slovakia.svg|20px|left|Slowekije]] [[Slowakije|Slowekije]] || 20-02-2001 || 05-09-2001 || 01-01-2002
-| Bulgaars, Duuts, Hongaars, Kroatisch, Oekraïens, [[Pools]], Roetheens, Romani, Tsjechisch
+| Bulgaars, Duuts, Hongaars, Kroatisch, Oekraïens, [[Pools]], Roetheens, Romani, Tsjechies
 |----- style="background-color:#aaffaa;"
 | [[Ofbeelding:Flag_of_Spain.svg|20px|left|Spanje]] [[Spanje]] || 05-11-1992 || 09-04-2001 || 01-08-2001
 | [[Baskisch]], [[Kattelaans]], [[Galicisch]]
