--- a/Elve.mw
+++ b/Elve.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Elbe Einzugsgebiet.png|thumb|250px|Strulgebied van de Elve]]
-De '''Elve''' ([[Duuts]]: ''Elbe'', [[Tsjechisch|Tjech]]: ''Labe'') is mit n lengte van 1164 [[km]] en n [[strulgebied]] van 144.000 km² ain van de wichtegste [[revier]]en van [[Midden Uropa]]. De Elve ontspringt ien t [[Reuzenbaargte]] en mondt oet ien de [[Noordzee]]. Heur grootste ziedrevieren binnen de [[Moldau]] en de [[Saale]]. Vrouger haitte dizze revier ien hail Nederlaand Elve, ien tieds dat tegenswoordeg de Duutse noam ien broeken is.
+De '''Elve''' ([[Duuts]]: ''Elbe'', [[Tsjechies]]: ''Labe'') is mit n lengte van 1164 [[km]] en n [[strulgebied]] van 144.000 km² ain van de wichtegste [[revier]]en van [[Midden Uropa]]. De Elve ontspringt ien t [[Reuzenbaargte]] en mondt oet ien de [[Noordzee]]. Heur grootste ziedrevieren binnen de [[Moldau]] en de [[Saale]]. Vrouger haitte dizze revier ien hail Nederlaand Elve, ien tieds dat tegenswoordeg de Duutse noam ien broeken is.
 
 ==Run van de revier==
 De Elve ontspringt ien t Reuzenbaargte ien [[Tzjechie]]. Via [[Pardubice]] en [[Ústí nad Labem]] runt de revier noar t westen tou en komt zuudoostlk van [[Dreesden]] [[Duutslaand]] (dailstoat [[Saksen (dielstaot)|Saksen]]) binnen. t Baargerg gebied tou Dresden tou hait de ''Sächsische Schweiz'' (Saksische Swits). Van [[Riesa]] ôf aan beriekt de Elve t leeglaand en begunt de middenrun van de revier.
