[[Motte|]]| → [[Motte (värken)|]]|

--- a/Keu.mw
+++ b/Keu.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Sow with piglet.jpg|thumb|250px|Een keu bie zien moe]]
-Een '''keu''' is een jong [[värken|varken]] mar kan oek een volwassen varken wezen. Keuen worren onderscheien in zugende en espeunde keuen. Zugende keuen drinken melk bie een [[motte|zog]]. Ze heten zo totdat ze espeund worren. Nao 't speunen wort 't een espeunde keu eneumd. Een zog kriegt meestentieds zes tot twaolf keuen per keer. De draagtied is oengeveer 112 tot 114 dagen (3 maoanden, 3 weken en 3 dagen).
+Een '''keu''' is een jong [[värken|varken]] mar kan oek een volwassen varken wezen. Keuen worren onderscheien in zugende en espeunde keuen. Zugende keuen drinken melk bie een [[motte (värken)|zog]]. Ze heten zo totdat ze espeund worren. Nao 't speunen wort 't een espeunde keu eneumd. Een zog kriegt meestentieds zes tot twaolf keuen per keer. De draagtied is oengeveer 112 tot 114 dagen (3 maoanden, 3 weken en 3 dagen).
 
 ==Nedersaksisch==
 *[[Achterhooks]]: ''pogge''
