--- a/Uro.mw
+++ b/Uro.mw
@@ -51,7 +51,7 @@ Urobraifkes binnen der as €500, €200, €100, €50, €20, €10 en €5. Z
 [[et:Euro]]
 [[eu:Euro]]
 [[ext:Euru]]
-[[fa:یورو]]
+[[fa:یورو]]hoi allemaal wie dit leest i= gay
 [[fi:Euro]]
 [[fiu-vro:Õuro]]
 [[fo:Euro]]
