geklieder van [[Speciaal:Biedragen/92.67.6.98|92.67.6.98]] weerummedreid

--- a/Uro.mw
+++ b/Uro.mw
@@ -6,4 +6,161 @@ De noam uro (euro) is offisjeel aannomen op 16 dizzìmber 1995.<ref>http://www.e
 == Aigenschoppen ==
 De uro is verdaild ien 100 [[sìnt]]en, dij sumtieds urosenten nuimd worden om dudelk tou môken dat t zok nait om n aander muntainhaid handeld. Aal munten hebben n gemainschoppelke ziede dij zain let hou veul of dat t weerd is, mit n laandkoart op achtergrond. Vanof t begun stonden op de maist munten, behaalve de 1, 2 en 5 sìnt, woar n globe op ston, allend de 15 oorspronkelke Urolanden. Sunt 2007 worden munten sloagen mt koarten dij ok laanden van buten de unie zain loaten, zo as [[Noorweeg]] en t [[Oostblok]]. De aander ziede van de munten het n ôfbeelden dij per laand verschilt. Aal munten, mit aal ofbeeldens, kinnen ien aal laanden van zône bruukt worden.
 Der binnen €2-, €1-, 50s-, 20s-, 10s-, 5s-, 2s-, and 1s-munten. Om de twij lutste munten nait tot bruken tou hebben, worden veul betoalens ôfrond noar vief sìnt ien Nederlaand en Finlaand.<ref>http://ec.europa.eu/economy_finance/een/005/article_4324_en.htm</ref>
-Urobraifkes binnen der as €500, €200, €100, €50, €20, €10 en €5. Zie hebben aal n aigen kleur en binnen môkt om n spesefieke periode ien Uropese geschiednis tou gedenken. Op aine kaant stoan poorten en roamen en aan ander kaant stoan bruggen.
+Urobraifkes binnen der as €500, €200, €100, €50, €20, €10 en €5. Zie hebben aal n aigen kleur en binnen môkt om n spesefieke periode ien Uropese geschiednis tou gedenken. Op aine kaant stoan poorten en roamen en aan ander kaant stoan bruggen. 
+
+=== Referìnsies ===
+<references/>
+
+[[Kattegerie:Grunnegs artikel]]
+[[Kattegerie:Geld]]
+[[Kattegerie:Europa]]
+
+[[nds:Euro]]
+[[af:Euro]]
+[[als:Euro]]
+[[am:ዩሮ]]
+[[an:Euro]]
+[[ar:يورو]]
+[[arc:ܐܘܪܘ]]
+[[arz:يورو]]
+[[ast:Euru]]
+[[az:Avro]]
+[[bar:Euro]]
+[[bat-smg:Eurs]]
+[[be:Еўра]]
+[[be-x-old:Эўра]]
+[[bg:Евро]]
+[[bn:ইউরো]]
+[[bpy:ইউরো]]
+[[br:Euro]]
+[[bs:Euro]]
+[[ca:Euro]]
+[[co:Euru]]
+[[crh:Avro]]
+[[cs:Euro]]
+[[cu:Єѵрѡ́]]
+[[cv:Евро]]
+[[cy:Ewro]]
+[[da:Euro]]
+[[de:Euro]]
+[[diq:Euro]]
+[[el:Ευρώ]]
+[[en:Euro]]
+[[eo:Eŭro]]
+[[es:Euro]]
+[[et:Euro]]
+[[eu:Euro]]
+[[ext:Euru]]
+[[fa:یورو]]
+[[fi:Euro]]
+[[fiu-vro:Õuro]]
+[[fo:Euro]]
+[[fr:Euro]]
+[[frp:Erô]]
+[[fur:Euro]]
+[[fy:Euro]]
+[[ga:Euro]]
+[[gan:歐元]]
+[[gd:Euro]]
+[[gl:Euro]]
+[[gn:Euro]]
+[[gv:Euro]]
+[[he:אירו]]
+[[hi:यूरो]]
+[[hif:Euro]]
+[[hr:Euro]]
+[[hsb:Euro]]
+[[hu:Euró]]
+[[hy:Եւրօ]]
+[[ia:Euro]]
+[[id:Euro]]
+[[ie:Euro]]
+[[io:Euro]]
+[[is:Evra]]
+[[it:Euro]]
+[[ja:ユーロ]]
+[[jbo:ronru'u]]
+[[jv:Euro]]
+[[ka:ევრო]]
+[[kk:Еуро]]
+[[kn:ಯುರೋ]]
+[[ko:유로]]
+[[krc:Евро]]
+[[ksh:Euro-Jeld]]
+[[ku:Euro]]
+[[kw:Euro]]
+[[la:Euro]]
+[[lad:Euro]]
+[[lb:Euro]]
+[[li:Euro]]
+[[lij:Euro]]
+[[lmo:Euro]]
+[[ln:Euro]]
+[[lt:Euras]]
+[[lv:Eiro]]
+[[mg:Euro]]
+[[mi:Euro]]
+[[mk:Евро]]
+[[ml:യൂറോ]]
+[[mn:Евро]]
+[[mr:युरो]]
+[[ms:Euro]]
+[[mt:Ewro]]
+[[mwl:Ouro (moneda)]]
+[[nah:Euro]]
+[[nap:Euro]]
+[[ne:युरो]]
+[[new:युरो]]
+[[nl:Euro]]
+[[nn:Euro]]
+[[no:Euro]]
+[[nov:Euro]]
+[[nrm:Étchu]]
+[[oc:Èuro]]
+[[os:Евро]]
+[[pap:Euro]]
+[[pl:Euro]]
+[[pms:Euro]]
+[[pnb:یورو]]
+[[pt:Euro]]
+[[qu:Iwru]]
+[[rm:Euro]]
+[[ro:Euro]]
+[[ru:Евро]]
+[[sah:Эуро]]
+[[scn:Euru]]
+[[sco:Euro]]
+[[se:Euro]]
+[[sh:Euro]]
+[[simple:Euro]]
+[[sk:Euro]]
+[[sl:Evro]]
+[[so:Euro]]
+[[sq:Euro]]
+[[sr:Евро]]
+[[st:Euro]]
+[[stq:Euro (Jäild)]]
+[[sv:Euro]]
+[[sw:Euro]]
+[[szl:Ojro]]
+[[ta:ஐரோ]]
+[[te:యూరో]]
+[[tg:Евро]]
+[[th:ยูโร]]
+[[tl:Euro]]
+[[tr:Euro]]
+[[tt:Евро]]
+[[ug:ياۋرۇ]]
+[[uk:Євро]]
+[[ur:یورو]]
+[[uz:Yevro]]
+[[vec:Euro]]
+[[vi:Euro]]
+[[wa:Motî:euro]]
+[[war:Euro]]
+[[wuu:欧元]]
+[[yi:איירא]]
+[[yo:Euro]]
+[[zh:欧元]]
+[[zh-min-nan:Euro]]
+[[zh-yue:歐羅]]
