[[Moskou]] →  [[Moskou (stad)|Moskou]](dat is [[Moskou (stad)]])

--- a/Europa_(werelddeel).mw
+++ b/Europa_(werelddeel).mw
@@ -62,7 +62,7 @@ Europa wördt meestal opdield in:
 | align="right" | 3,960,000
 | align="right" | 106,037,143
 | align="right" | 26.8
-| [[Moskou]]
+| [[Moskou (stad)|Moskou]]
 |-
 | [[Slowakije]]
 | align="right" | 48,845
