[[Moskou]] →  [[Moskou (stad)|Moskou]](dat is [[Moskou (stad)]])

--- a/Ruslaand.mw
+++ b/Ruslaand.mw
@@ -4,7 +4,7 @@
 | waopen = [[Ofbeelding:Coat of Arms of the Russian Federation.svg|90px|Waopen van Ruslaand]]
 | lekaosie = [[Ofbeelding:LocationRussia.png|250px|Lekaosie van Ruslaand]]
 | taelen = [[Russisch]] (en aandere)
-| heufdstad = [[Moskou]]
+| heufdstad = [[Moskou (stad)|Moskou]]
 | religie = [[Russisch-Orthodoxe Karke|Russisch-orthodox]] (58%)<br /> [[islam]] (5%)<br />[[boeddhisme]] (5%)<br />[[jodendom]] (0,2%)<br />[[sjamanisme]]/[[animisme]]
 | regeringsvorm = [[Federaole rippebliek]]
 | km2 = 17.075.200 | pctwaeter = 0,5
@@ -36,7 +36,7 @@ Over de volgende ieuwen wodden de Slavische hertogdommen van et ''Zaleśje'' om 
 Disse tied wodt in Ruslaand anduud as et ''Mongoolse juk'' - de Russsiche hertogdommen verleuren heur onofhaankelikhied an de Tataarse ''chans'', die hoge belasting opeisten en de grotere steden om de zoveul tied plunderden. Dit het d'r-toe leided, dat tiedens de volledige [[middeleeuwn|middelieuwen]] Ruslaand machteloos was en him ekonomisch niet ontwikkelen kon. Allend Novgorod en [[Pskov]] in et noordwesten wol et lokken de Tataoren buten te holen, en zels om onofhaankelikhied van Polen-Litouwen en van de [[Teutonen]] te blieven beholen.
 
 === Moskovië ===
-Now dat et Mongoolse riek staorigan uutmekeerviel ontwikkelde [[Moskou]] him van een klein dörp tot ien van de weinige grotere steden van Ruslaand, en bi'j de veldslag op et [[Veldslag op et Snippenveld|Snippenveld]] in [[1389]] begon et aende van et Mongoolse juk. De vaal van [[Konstantinopel]] in 1453 leide d'r-toe, dat de Moskou-Russen heur stad as et laeste bolwark van et "echte" [[christendom|kristendom]], et [[Oosters-Orthodoxe Karke|orthodoxie]], gongen zien. In de woorden van [[Ivan Kalita]] (Ivan Geldbudel, groothertog van Moskovië 1456 - 1505): ''Et eerste Rome is valen, en et twiede Rome, Konstantinopel, ok: Moskou is et dadde Rome en d'r komt gien vierde.'' Dezelde Ivan veroverde een bult van de omliggende Russische hertogdommen, en nam de titel "Groothertog van alle Ruslanen".
+Now dat et Mongoolse riek staorigan uutmekeerviel ontwikkelde [[Moskou (stad)|Moskou]] him van een klein dörp tot ien van de weinige grotere steden van Ruslaand, en bi'j de veldslag op et [[Veldslag op et Snippenveld|Snippenveld]] in [[1389]] begon et aende van et Mongoolse juk. De vaal van [[Konstantinopel]] in 1453 leide d'r-toe, dat de Moskou-Russen heur stad as et laeste bolwark van et "echte" [[christendom|kristendom]], et [[Oosters-Orthodoxe Karke|orthodoxie]], gongen zien. In de woorden van [[Ivan Kalita]] (Ivan Geldbudel, groothertog van Moskovië 1456 - 1505): ''Et eerste Rome is valen, en et twiede Rome, Konstantinopel, ok: Moskou is et dadde Rome en d'r komt gien vierde.'' Dezelde Ivan veroverde een bult van de omliggende Russische hertogdommen, en nam de titel "Groothertog van alle Ruslanen".
 
 Begin zestiende ieuw wodde de Russische adel vormd, de kaste van ''bojaren'', die van de Moskovische groothertog landeri'jen kregen, [[peerd]]en, en legers, mit et doel Moskovië te verdedigen tegen de [[Krim-Tataren]] in et zuden, en aandere Turkische stammen, overbleven van et uutmekeervalen Mongoolse Riek.
 
@@ -49,10 +49,10 @@ De Russische Federaosie omvatte sund [[1992]] 89 gebieden mit een uutienlopende 
 * 7 [[krajs]]
 * 1 autonoom [[oblast]]
 * 9 autonome [[distrikt]]en (okroegs)
-* 2 federaole [[Stad (woonstee)|steden]] ([[Moskou]] en [[Sunt-Petersborg]]) 
+* 2 federaole [[Stad (woonstee)|steden]] ([[Moskou (stad)|Moskou]] en [[Sunt-Petersborg]]) 
 
 == Belangrieke steden ==
-[[Archangelsk]] — [[Astrachan]] — [[Irkoetsk]] — [[Jekaterinenburg]] — [[Kaliningrad]] — [[Kazan]] — [[Krasnojarsk]] — [[Moermansk]] — [[Moskou]] — [[Nizjni Novgorod]] — [[Novgorod]] — [[Novosibirsk]] — [[Oefa]] — [[Omsk]] — [[Penza]] — [[Perm]] — [[Petrozavodsk]] — [[Pskov]] — [[Rostov an de Don]] — [[Samara]] — [[Saratov]] — [[Sint-Petersburg]] — [[Tomsk]] — [[Tsjeljabinsk]] — [[Tver]] — [[Vladivostok]] — [[Vologda]] — [[Voronezj]] — [[Wolgograd]]
+[[Archangelsk]] — [[Astrachan]] — [[Irkoetsk]] — [[Jekaterinenburg]] — [[Kaliningrad]] — [[Kazan]] — [[Krasnojarsk]] — [[Moermansk]] — [[Moskou (stad)|Moskou]] — [[Nizjni Novgorod]] — [[Novgorod]] — [[Novosibirsk]] — [[Oefa]] — [[Omsk]] — [[Penza]] — [[Perm]] — [[Petrozavodsk]] — [[Pskov]] — [[Rostov an de Don]] — [[Samara]] — [[Saratov]] — [[Sint-Petersburg]] — [[Tomsk]] — [[Tsjeljabinsk]] — [[Tver]] — [[Vladivostok]] — [[Vologda]] — [[Voronezj]] — [[Wolgograd]]
 
 == Religie ==
 Ruslaand het een groot antal religies, mar is overwegend atheïstisch. De [[Russisch-Orthodoxe Karke]] is ok nao 1991 de meest dominante kristelike religie bleven in Ruslaand, mar het veul anhang verleuren tiedens et kommunisme. Veul etnische Russen bin niet meer religieus, mar staon nog wel sympathiek tegenover disse karke, die ok een grote kulturele betekenis had het veur de Russische geschiedenis. De [[islam]] volgt op de tweede plak. Anadere religies omvatten verschillende [[protestantisme|protestaanse]] karken en de [[ooldgeleuvigen]], [[boeddhisme]], [[jodendom]], [[Rooms-Katholieke Karke|rooms-kattelicisme]] en [[sjamanisme]]. Overarving van geleuven vient over et algemien plak langes etnische lienen: etnische Russen bin vaeke Russisch-orthodox en Turkse en Kaukasische volken bin vaeke islamitisch. [[Neopaganisme]] kriegt veural de laeste tied anhangers onder meensken van Slavische oorsprong.
