--- a/5_meert.mw
+++ b/5_meert.mw
@@ -2,7 +2,7 @@
 De volgende gebeurtenissen vunnen of vienen plaose op '''5 meert'''
 
 == Gebeurtenissen ==
-* [[1918]] - De [[Sovjet-Unie]] verschuuf de heufstad van [[Sint-Petersburg|Petrograd]] naor [[Moskou]].
+* [[1918]] - De [[Sovjet-Unie]] verschuuf de heufstad van [[Sint-Petersburg|Petrograd]] naor [[Moskou (stad)|Moskou]].
 * [[1946]] - [[Winston Churchill]] neum 't ''[[Iezeren gedien]]'' in zien toesprake in 't [[Westminster College]] in [[Fulton]], [[Missouri]]. Dit wonnen ezien as 't beginne van de [[Kouwe Oorlog]]. 
 
 == Geboren ==
