[[VK]] → [[Veenkelonioals|VK]] (dat is [[Veenkelonioals]])

--- a/Krante.mw
+++ b/Krante.mw
@@ -16,10 +16,10 @@ Een veurbeeld van een krante dee neet as dagblad verschient is [[Le Monde Diplom
 == Nedersaksisch ==
 * [[Achterhooks]]: ''krante''
 * [[Drèents]]:
-** ''kraant'' ([[ZOZ]], [[VK]], [[MD]])
-** ''kraante'' ([[ZW]], [[ZOV]], [[MD]], [[VK]])
-** ''krante'' ([[ZOV]])
-** ''kraande'' ([[VK]])
+** ''kraant'' ([[ZOZ]], [[Veenkelonioals|VK]], [[MD]])
+** ''kraante'' ([[ZW]], [[ZOV]], MD, VK)
+** ''krante'' (ZOV)
+** ''kraande'' (VK)
 * [[Graafschopper Platt]]: ''kraunte'' (Platduutse schriefwieze ''Krânte'')
 * [[Grunnegs]]: ''kraande'', ''kraant{{small()|e}}'', ''tieden'' of ''nijsblad''
 * [[Stellingwarfs]]: ''kraante''
