[[VK]] → [[Veenkelonioals|VK]] (dat is [[Veenkelonioals]])

--- a/Klootscheetn.mw
+++ b/Klootscheetn.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding: Bosselk kloot.JPG|thumb|right|300x|2 kleute in n snee]]
+[[Ofbeelding: Bosselk kloot.JPG|thumb|right|2 kleute in n snee]]
 '''Klootscheetn''' is n [[balspel]] woerbie deelnemmers probeert nen bal (of ''kloot'') oonderhaands zo wied meugelik te gooin. t Spel wördt duur joonk en oold spöald. Der bestoat verschilnde variaantn:
 
 *n [[Scheidsrechter]] bepoalt vuurof woer t eandpeunt is. De spöllers mut dan in zoo min meugelik wörpe den bepoaldn ofstaand oflegn.
@@ -14,7 +14,6 @@ Duur restrikties van gröttere stean, umdat t vuur völ verneling en smangs zöl
 
 t Schient dat, duurdat [[Ierlaand]] nog n zetjen van Prins [[Willem van Oranje]] was, t klootscheetn doar n opleaving hef keand en tot an vandage gereageld spöald wördt.
 
-
 ==In de beuke==
 Wellich t bekeandste vuurbeeld van klootskeetn in de beuke is in ''Mans Kapbaarg'' van [[G.B. Vloedbeld]]. Tiedns ne veeldtocht in dienst van [[Napoleon Bonaparte]] löp heuwdfiguur Mans Kapbaarg in ne hinderloage van de [[Balejoarn|Baljoarn]], dee't met slingers en keie t Fraanske leager anvalt. Kapbaarg verslöt doarop de Baljoarn duur öarn kaptein met ene ''smette'' met n kloot tusken de ogen te smietn.
 
@@ -28,7 +27,7 @@ Ook in [[Duutslaand]] en [[Italiën]] is n anwas van serieuze spöllers te zeen.
 In Tweante zeent verskeaidene Klootsketersvereniges, woervan at dr wat zo groot beent det ze n eegn verenigingshoes hebt. Kleaindere verenigings huurt van aandere verenigings de kantine of, of t [[kulturhus]].
 
 ==Neersassies==
-*[[Drèents]]: ''klootschieten'' (uutspraoke ok ''sk''); ''-schaiten'', ''-scheiten'' ([[KVD]], [[VK]], [[ZOV]]), ''-scheten'' ([[MD]], [[ZWD]]), ''-scheeiten'' ([[KVD]], [[MD]]), ''-sch(a)aiten'' ([[KVD]], [[VK]])
+*[[Drèents]]: ''klootschieten'' (uutspraoke ok ''sk''); ''-schaiten'', ''-scheiten'' ([[KVD]], [[Veenkelonioals|VK]], [[ZOV]]), ''-scheten'' ([[MD]], [[ZWD]]), ''-scheeiten'' (KVD, MD), ''-sch(a)aiten'' (KVD, VK)
 *[[Graofschopper plat]]: ''kloatsheeten'' 
 *[[Grunnegs]]: ''klootschaiten''
 *[[Oostfreisk]]: ''kloutskaiten'' (schriefwies: ''klootscheten'')
