[[VK]] → [[Veenkelonioals|VK]] (dat is [[Veenkelonioals]])

--- a/Sokkeloa.mw
+++ b/Sokkeloa.mw
@@ -11,11 +11,11 @@ n Overzichtsartikel over de ienvloed van de effekten van sokkeloa is ien maai [[
 
 == Leegsaksisch ==
 * [[Drèents]]:
-** ''sukelao'' ([[ZOZ]], [[ZW]], [[MD]], [[VK]]])
-** ''sukkelao'' (Noord-Drenthe), [[ZO]])
-** ''sukela'' ([[ZO]], [[ZWZ]])
-** ''sukkela'' ([[ZO]])
-** ''sukerlao'' ([[ZW]])
+** ''sukelao'' ([[ZOZ]], [[ZW]], [[MD]], [[Veenkelonioals|VK]])
+** ''sukkelao'' (Noord-Drenthe, [[ZO]])
+** ''sukela'' (ZO, [[ZWZ]])
+** ''sukkela'' (ZO)
+** ''sukerlao'' (ZW)
 * [[Graafschopper Platt]]: ''soekkelaa'' (Platduutse schriefwieze ''Sukkelaa'')
 * [[Grunnegs]]: ''sokkeloa(t)'', ''sukkeloa(t)''
 * [[Veluws]]: ''sukelao''
