--- a/Biejevreter.mw
+++ b/Biejevreter.mw
@@ -13,7 +13,7 @@ Biejevreters staon der um bekend dat ze doppen van [[melk]]flessen lospikken um 
 ** ''bijmeesie'' ([[Zeyen]]), ''bijmies''
 ** ''iemenpikkerdie'', ''iemenpikkertie{{small()|n}}''
 ** ''iemensnappertien'' ([[Ni'jlusen]])
-** ''meze'' ([[ZW]], [[VK]], [[ZOV]]), ''mees''
+** ''meze'' ([[ZW]], [[Veenkelonioals|VK]], [[ZOV]]), ''mees''
 * [[Stellingwarfs]]:
 ** ''bi'jebietertien''
 * [[Tweants]]
