--- a/Nedersaksische_skeeldwöarde.mw
+++ b/Nedersaksische_skeeldwöarde.mw
@@ -346,14 +346,14 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 *[[Achterhooks]]: 
 *[[Drèents]]:
 **''lillijkerd''
-**''loesoor'' ([[MD]], [[VK]], [[ZOZ]], [[ZOV]], [[ZWZ]])
+**''loesoor'' ([[MD]], [[Veenkelonioals|VK]], [[ZOZ]], [[ZOV]], [[ZWZ]])
 **''pienhond'' (eheurd op [[Ni'jlusen]])
 **''(minne) poesterd/poetzak'' ([[Ni'jlusen]])<ref name="Schoemaker">Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref>
 **''smaigel'' ([[ZOV]])
 **''smeigel''
-**''smeigelaar'' ([[MD]], [[ZOZ]], [[ZOV]], [[ZWZ]])
-**''smiegel'' ([[MD]], [[VK]], [[ZWN]])
-**''smiegelkont'' ([[VK]])
+**''smeigelaar'' (MD, ZOZ, ZOV, ZWZ)
+**''smiegel'' (MD, VK, [[ZWN]])
+**''smiegelkont'' (VK)
 **''smiegemerd''
 **''voele'', ''voelerd''
 *[[Grönnegs]]:
@@ -478,14 +478,14 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 **''doelenkop'' ([[KVD]])
 **''fatsenmaker'' ([[ZWZ]])
 **''kletser(d)''
-**''kruudkremer'' ([[ZOZ]], [[ZWN]], [[ZWZ]])
+**''kruudkremer'' ([[ZOZ]], [[ZWN]], ZWZ)
 **''menister'', ''minister''
-**''pikverkoper'' ([[ZWZ]])
-**''praotjeboksem'' ([[VK]])
-**''prootiesmaker'' ([[KVD]], [[VK]])
+**''pikverkoper'' (ZWZ)
+**''praotjeboksem'' ([[Veenkelonioals|VK]])
+**''prootiesmaker'' (KVD, VK)
 **''prootbuul'', ''-majoor'', ''-vaar'', ''-zak'' ([[MD]], [[ZW]])
 **''preekva''
-**''smous'' ([[KVD]], vanolds een scheldwoord veur een Judde)
+**''smous'' (KVD, vanolds een scheldwoord veur een Judde)
 *[[Grunnegs]]:
 **''kwakkert'', ''kwakdeuze'' (aine dij dingen vertelt dij nait woar binnen of minder as dat er sèggen dut)
 **''poestert'' (aine dij dingen vertelt dij beter lieken as dat ze waarkelk binnen)
