[[VK]] → [[Veenkelonioals|VK]] (dat is [[Veenkelonioals]])

--- a/Nedersaksisch_C.mw
+++ b/Nedersaksisch_C.mw
@@ -18,11 +18,11 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit C begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: ''sukela''
 *[[Drèents]]: 
-**''sukelao'' ([[ZOZ]], [[ZW]], [[MD]], [[VK]])
+**''sukelao'' ([[ZOZ]], [[ZW]], [[MD]], [[Veenkelonioals|VK]])
 **''sukkelao'' ([[ZO]])
-**''sukela'' ([[ZO]], [[ZWZ]])
-**''sukkela'' ([[ZO]])
-**''sukerlao'' ([[ZW]])
+**''sukela'' (ZO, [[ZWZ]])
+**''sukkela'' (ZO)
+**''sukerlao'' (ZW)
 * [[Graafschopper Platt]]: ''soekkelaa'' (Platduutse schriefwieze ''Sukkelaa'')
 *[[Grönnegs]]: 
 **'''''[[sokkeloa]]'''(t)''
