[[VK]] → [[Veenkelonioals|VK]] (dat is [[Veenkelonioals]])

--- a/Hienebees.mw
+++ b/Hienebees.mw
@@ -111,7 +111,7 @@ Ofbeelding:Raspberry.jpg|Hienebees
 **''himbaai''
 **''framboze'' (verhollaandst)
 *[[Drèents]]:
-**''framboze'' ([[ZW]], [[ZO]], [[VK]]), ''framboos''
+**''framboze'' ([[ZW]], [[ZO]], [[Veenkelonioals|VK]]), ''framboos''
 **(volgt nog)
 *[[Stellingwarfs]]: ''framboze''
 *[[Veluws]]:
