--- a/Skandinavie.mw
+++ b/Skandinavie.mw
@@ -20,6 +20,7 @@ De talen [[Noors]] ([[Bokmål]] en [[Niejnoors]]), [[Zweeds]] en [[Deens]] wörd
 
 Der bin ook een bulte Noord-Germaanse en [[Samisch]]e dialekken. In Zweden wördt op sommige plaosen ook wel [[Fins]] esproken.
 
+{{Commonscat|Scandinavia}}
 [[Kattegerie:Oost-Veluws artikel]]
 [[Kattegerie:Europa]]
 
