--- a/Peerd.mw
+++ b/Peerd.mw
@@ -5,9 +5,9 @@ Een klein peertien nuumt ze een ''kedde'' of een ''kidde'', een peertien kleiner
 
 == Nedersaksisch ==
 * [[Drèents]]: 
-** ''pèerd'' ([[MD]], [[ZOZ]], [[ZWN]])
+** ''pèerd'' ([[Midden-Drèents|MD]], [[ZOZ]], [[ZWN]])
 ** ''peerd'' ([[ZW]])
-** ''pièerd'' ([[ZW]])
+** ''pièerd'' (ZW)
 * [[Graafschopper Platt]]: ''peard'' (Platduutse schriefwieze ''Peärd'')
 * [[Grunnegs]]: ''peerd'', ''daaier'' <small>(= dier, gef biezöndere stoates van t peerd op t Hoogelaand aan)</small>
 * [[Tweants]]:
