--- a/Krante.mw
+++ b/Krante.mw
@@ -16,7 +16,7 @@ Een veurbeeld van een krante dee neet as dagblad verschient is [[Le Monde Diplom
 == Nedersaksisch ==
 * [[Achterhooks]]: ''krante''
 * [[Drèents]]:
-** ''kraant'' ([[ZOZ]], [[Veenkelonioals|VK]], [[MD]])
+** ''kraant'' ([[ZOZ]], [[Veenkelonioals|VK]], [[Midden-Drèents|MD]])
 ** ''kraante'' ([[ZW]], [[ZOV]], MD, VK)
 ** ''krante'' (ZOV)
 ** ''kraande'' (VK)
