[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]]); ok [[Veenkelonioals]] → [[Veenkelonioals|VK]]

--- a/Puut.mw
+++ b/Puut.mw
@@ -16,8 +16,8 @@ t Woord ''puut'' is n typisch [[Grunnegs]] woord. t Is t ain van de maist bruukt
 **''tas'', ''tesken''
 **''zak'', ''zeksken''
 *[[Drèents]]:
-**puut (algemien), pute ([[MD]], [[ZW]]), pude ([[Veenkelonioals]])
-**tas (algemien), taske ([[ZOV]]), tasse ([[MD]], [[Veenkelonioals]], [[ZW]])
+**puut (algemien), pute ([[Midden-Drèents|MD]], [[ZW]]), pude ([[Veenkelonioals|VK]])
+**tas (algemien), taske ([[ZOV]]), tasse (MD, VK, ZW)
 *[[Grunnegs]]: ''puut'', ''pude'', ''pute''
 *[[Tweants]]: 
 **''toete'', ''toetn''
