[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]])

--- a/Kukeluusjen.mw
+++ b/Kukeluusjen.mw
@@ -32,14 +32,14 @@ Ofbeelding:Coccinella septempunctata Luc Viatour.JPG
 *[[Drèents]]:
 **''harbarmottie'', ''armmarmottie'' ([[ZOV]])
 **''zunnehondtien'' ([[Padhuus]])
-**''meneertiek'', ''menerentikkie'' ([[MD]], [[KVD]])
-**''vadershoentje'' ([[MD]])
+**''meneertiek'', ''menerentikkie'' ([[Midden-Drèents|MD]], [[KVD]])
+**''vadershoentje'' (MD)
 **''marmot'' ([[ZW]])
 **''herenshondtien''
 **''aarmbaarmoeltien'' ([[ZWN]])
 **''lieveheershondtien''
 **''liefheertien'' ([[ZOZ]])
-**''sprinkhaan'', ''-hane/-haene/-haone'' ([[KVD]])
+**''sprinkhaan'', ''-hane/-haene/-haone'' (KVD)
 **''boerenzeun{{small()|tien}}''
 **''herebeestien''
 **''leivenheerstiekie''
