[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]])

--- a/Riesebessem.mw
+++ b/Riesebessem.mw
@@ -11,7 +11,7 @@ Ne Tweantse [[zeespreuk|sprökke]] geet ook oaver n riesebessem:
 
 * [[Achterhooks]]: ''riesebessem''
 * [[Drèents]]:
-** ''riesbessem'' ([[KVD]], [[MD]], [[Veenkelonioals|VK]], [[ZOZ]], [[ZOV]])
+** ''riesbessem'' ([[KVD]], [[Midden-Drèents|MD]], [[Veenkelonioals|VK]], [[ZOZ]], [[ZOV]])
 ** ''rieze(n)bessem'' (hiel [[Drenthe]])
 * [[Tweants]]: ''riesbessem''
 
