[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]])

--- a/Nedersaksische_skeeldwöarde.mw
+++ b/Nedersaksische_skeeldwöarde.mw
@@ -346,7 +346,7 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 *[[Achterhooks]]: 
 *[[Drèents]]:
 **''lillijkerd''
-**''loesoor'' ([[MD]], [[Veenkelonioals|VK]], [[ZOZ]], [[ZOV]], [[ZWZ]])
+**''loesoor'' ([[Midden-Drèents|MD]], [[Veenkelonioals|VK]], [[ZOZ]], [[ZOV]], [[ZWZ]])
 **''pienhond'' (eheurd op [[Ni'jlusen]])
 **''(minne) poesterd/poetzak'' ([[Ni'jlusen]])<ref name="Schoemaker">Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref>
 **''smaigel'' ([[ZOV]])
@@ -483,7 +483,7 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 **''pikverkoper'' (ZWZ)
 **''praotjeboksem'' ([[Veenkelonioals|VK]])
 **''prootiesmaker'' (KVD, VK)
-**''prootbuul'', ''-majoor'', ''-vaar'', ''-zak'' ([[MD]], [[ZW]])
+**''prootbuul'', ''-majoor'', ''-vaar'', ''-zak'' ([[Midden-Drèents|MD]], [[ZW]])
 **''preekva''
 **''smous'' (KVD, vanolds een scheldwoord veur een Judde)
 *[[Grunnegs]]:
