--- a/Ölliekneppe.mw
+++ b/Ölliekneppe.mw
@@ -22,10 +22,10 @@ Völle vereniges, zoas [[koor]]n en  muziekkorpsn, probeert alle joarn öare kas
 
 ==Neersassies==
 *[[Drèents]]
-**''balbuisie'' ([[ZW]], [[MD]]) (betiekent ok poffertien; in de betiekenisse van ''euliekrappe'' gebruukt in [[ZWZ]]). Ok ''balle-'' ([[ZW]]), ''bol-'' ([[MD]]), ''bolle-'' ([[ZWZ]]), ''-buusie'' ([[ZWZ]])
+**''balbuisie'' ([[ZW]], [[Midden-Drèents|MD]]) (betiekent ok poffertien; in de betiekenisse van ''euliekrappe'' gebruukt in [[ZWZ]]). Ok ''balle-'' (ZW), ''bol-'' (MD), ''bolle-'' (ZWZ), ''-buusie'' (ZWZ)
 **''euliebol''
-**''euliekoek'' ([[ZWZ]], [[ZOZ]])
-**''euliekrappe'', ''krappe'' ([[ZWZ]])
+**''euliekoek'' (ZWZ, [[ZOZ]])
+**''euliekrappe'', ''krappe'' (ZWZ)
 *[[Grönnegs]]:
 **''euljekouk''
 **''euliekouk(e)''
