[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]])

--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -909,10 +909,10 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Achterhooks]]: ''ulk''
 *[[Drèents]]
 **''buusling'' (algemien)
-**''beu(i)nzelk'', ''bunzelk'' ([[MD]])
+**''beu(i)nzelk'', ''bunzelk'' ([[Midden-Drèents|MD]])
 **''beuinzelk'', ''beunzeling'', ''bunzel'' ([[KVD]], [[ZOV]])
-**''buunsling'', ''buunzeling'', ''buunzik'', ''buunze'' ([[MD]], [[ZOZ]], [[ZWN]])
-**''buzelk'' ([[ZOZ]])
+**''buunsling'', ''buunzeling'', ''buunzik'', ''buunze'' (MD, [[ZOZ]], [[ZWN]])
+**''buzelk'' (ZOZ)
 **''buzelink'', ''buzink'', ''buunzi(n)k'', ''buunzing'' ([[ZWZ]])
 **''meerten''
 **''mutte''
