--- a/Nedersaksisch_C.mw
+++ b/Nedersaksisch_C.mw
@@ -18,7 +18,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit C begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: ''sukela''
 *[[Drèents]]: 
-**''sukelao'' ([[ZOZ]], [[ZW]], [[MD]], [[Veenkelonioals|VK]])
+**''sukelao'' ([[ZOZ]], [[ZW]], [[Midden-Drèents|MD]], [[Veenkelonioals|VK]])
 **''sukkelao'' ([[ZO]])
 **''sukela'' (ZO, [[ZWZ]])
 **''sukkela'' (ZO)
