[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]])

--- a/Nedersaksisch_L.mw
+++ b/Nedersaksisch_L.mw
@@ -5,8 +5,8 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit L begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: ''stiefel''
 *[[Drèents]]:
-**''lèers'' ([[ZOZ]], [[MD]]), ''leers'' ([[ZOZ]], [[ZOV]], [[KVD]]), ''lèerze'' ([[ZWZ]], [[MD]]). ''leerze'' ([[ZWN]], [[ZWZ]], [[ZOV]]), ''laars'' ([[ZOZ]])
-**''guistevel'' (hoge stevel, [[KVD]])
+**''lèers'' ([[ZOZ]], [[Midden-Drèents|MD]]), ''leers'' (ZOZ, [[ZOV]], [[KVD]]), ''lèerze'' ([[ZWZ]], MD). ''leerze'' ([[ZWN]], [[ZWZ]], ZOV), ''laars'' (ZOZ)
+**''guistevel'' (hoge stevel, KVD)
 **''stevel'' (verolderd)
 *[[Grönnegs]]: '''''[[stevel]]'''''
 *[[Sallaans]]: ...
@@ -135,14 +135,14 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit L begunt''' oet 't [[Neders
 *[[Drèents]]:
 **''harbarmottie'', ''armmarmottie'' ([[ZOV]])
 **''zunnehondtien'' ([[Padhuus]])
-**''meneertiek'', ''menerentikkie'' ([[MD]], [[KVD]])
-**''vadershoentje'' ([[MD]])
+**''meneertiek'', ''menerentikkie'' ([[Midden-Drèents|MD]], [[KVD]])
+**''vadershoentje'' (MD)
 **''marmot'' ([[ZW]])
 **''herenshondtien''
 **''aarmbaarmoeltien'' ([[ZWN]])
 **''lieveheershondtien''
 **''liefheertien'' ([[ZOZ]])
-**''sprinkhaan'', ''-hane/-haene/-haone'' ([[KVD]])
+**''sprinkhaan'', ''-hane/-haene/-haone'' (KVD)
 **''boerenzeun{{small()|tien}}''
 **''herebeestien''
 **''leivenheerstiekie''
