[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]]); ok [[Veenkelonioals]] → [[Veenkelonioals|VK]]

--- a/Nedersaksisch_P.mw
+++ b/Nedersaksisch_P.mw
@@ -286,8 +286,8 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 *[[Nederlands]]: ''plastic tas''
 
 *[[Drèents]]:
-**puut (algemien), pute ([[MD]], [[ZW]]), pude ([[Veenkelonioals]])
-**tas (algemien), taske ([[ZOV]]), tasse ([[MD]], [[Veenkelonioals]], [[ZW]])
+**puut (algemien), pute ([[Midden-Drèents|MD]], [[ZW]]), pude ([[Veenkelonioals|VK]])
+**tas (algemien), taske ([[ZOV]]), tasse (MD, VK, ZW)
 *[[Grunnegs]]: 
 **'''''[[puut]]''''', ''pude'', ''pute''
 **''tute'' (WEV)
