[[VEK]] → [[Veenkelonioals|VEK]] (dat is [[Veenkelonioals]])

--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -396,7 +396,7 @@
 *'''Aander meugelkheden''': 
 **aive
 **eiw ([[WEV]]) 
-**eeuw ([[VEK]])
+**eeuw ([[Veenkelonioals|VEK]])
 **ieuw ([[WEK]])
 *'''Ôfgelaaide woorden''': 
 **aiweg, aiveg, eeuweg (eeuwig)
