[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]])

--- a/Nedersaksisch_S.mw
+++ b/Nedersaksisch_S.mw
@@ -24,11 +24,11 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit S begunt''' oet 't [[Neders
 **''kieven''
 **''oetvaren'', ''uutvaren''
 **''raggeln'' ([[ZOV]], [[ZWZ]])
-**''raggen'' ([[ZOZ]], [[ZOV]], [[ZWZ]])
+**''raggen'' ([[ZOZ]], ZOV, ZWZ)
 **''schelden''
-**''schrobben'' ([[MD]], [[ZOZ]])
-**''schroeten'' ([[ZOZ]])
-**''uutpakken'' ([[ZWZ]])
+**''schrobben'' ([[Midden-Drèents|MD]], ZOZ)
+**''schroeten'' (ZOZ)
+**''uutpakken'' (ZWZ)
 *[[Grönnegs]]: ...
 *[[Oostfreisk]]: ...
 *[[Sallaans]]: ...
