[[MD]] → [[Midden-Drèents|MD]] (dat is [[Midden-Drèents]])

--- a/Nedersaksisch_T.mw
+++ b/Nedersaksisch_T.mw
@@ -166,7 +166,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit T begunt''' oet 't [[Neders
 **''tiedjen''
 *[[Drèents]]:
 **''poos'', ''poze'' ([[ZWN]], [[ZWZ]]), ''poosie{{small()|n}}''
-**''raom'', ''raompie{{small()|n}}'' ([[MD]], ZWN, ZWZ, [[ZOZ]])
+**''raom'', ''raompie{{small()|n}}'' ([[Midden-Drèents|MD]], ZWN, ZWZ, [[ZOZ]])
 **''rekte'' (MD, [[Veenkelonioals|VK]]), ''rek''
 **''roffel''
 **''ruk'', ''rok'' (ZWN, ZWZ), ''rök'' (ZWZ)
