--- a/Ulk.mw
+++ b/Ulk.mw
@@ -42,9 +42,9 @@ De ulk is [[endemie (biogeografie)|endemisch]] veur [[Europa (continent)|Europa]
 *[[Achterhooks]]: ''ulk'' (ok gebroekt as skeldwoord veur ene den stunk, al dan neet veurof-egoane deur viezen of smearegen, in et bi'jzunder veur ene den der juust ene hef loaten vlegen)
 *[[Drèents]]
 **''buusling'' (algemien)
-**''beu(i)nzelk'', ''bunzelk'' ([[MD]])
+**''beu(i)nzelk'', ''bunzelk'' ([[Midden-Drèents|MD]])
 **''beuinzelk'', ''beunzeling'', ''bunzel'' ([[KVD]], [[ZOV]])
-**''buunsling'', ''buunzeling'', ''buunzik'', ''buunze'' ([[MD]], [[ZOZ]], [[ZWN]])
+**''buunsling'', ''buunzeling'', ''buunzik'', ''buunze'' (MD, [[ZOZ]], [[ZWN]])
 **''buzelk'' ([[ZOZ]])
 **''buzelink'', ''buzink'', ''buunzi(n)k'', ''buunzing'' ([[ZWZ]])
 **''meerten''
