[[Kuunder]] → [[Kuunder (revier)|Kuunder]] (dat is [[Kuunder (revier)]])

--- a/Stellingwarf.mw
+++ b/Stellingwarf.mw
@@ -6,7 +6,7 @@ Bestuurlik omvat et de gemienten [[Ooststellingwarf]] en [[Weststellingwarf]] (o
 Laandschoppelik vormt et mit een antal omliggende gebieden de [[Friese Woolden]]. In et greensgebied van Drenthe en Frieslaand leit et [[Nationaol Park Drents-Friese Woold]]. In noord-Overiessel leit et [[Nationaol Park De Weerribben]] en de meren rond [[Gieteren]] (Giethoorn).
 In een kotleden (2006) daon onderzuuk dee blieken dat de mooiste gebieden van alledrie de perveensies Frieslaand, Drenthe en Overiessel in Stellingwarf liggen.
 
-In et noorden stroomt de [[Kuunder]], deur et midden van Stellingwarf stroomt de [[Lende]].
+In et noorden stroomt de [[Kuunder (revier)|Kuunder]], deur et midden van Stellingwarf stroomt de [[Lende]].
 
 ==Geschiedenis==
 Waor de Stellingwarvers oorspronkelik wegkommen is niet hielendal wisse. D'r bestaot een verhael, dat ze rond [[840]] veur ien van de kleinzeunen van [[Karel de Grote]] naor disse streek vlucht bin vanuut een streek in et zuden van [[Hannover]] in [[Duutslaand]]. 
@@ -56,7 +56,7 @@ Et gebied onderscheidt him van [[Frieslaand]] deurdat d'r vanoolds gien [[Freesk
 == Referensies ==
 <references/>
 
-[[Kattegerie:Stellingwarfs_artikel]]
+[[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Stellingwarven]]
 
 [[de:Stellingwerven]]
