--- a/Rotstergaast.mw
+++ b/Rotstergaast.mw
@@ -1,7 +1,7 @@
-[[Ofbeelding:Map NL Skarsterlân Rotstergaast.png|thumb|300px|Ligging Rotstergaast]]
+[[Ofbeelding:Map NL Skarsterlân Rotstergaast.png|thumb|Ligging Rotstergaast]]
 '''Rotstergaast''' is een dörpien in et zuudoosten van de gemiente [[Scharsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et oosten van et [[Tjeukemeer]], en had in [[2004]] omdebi'j 200 inwoners.
 
-In de naeme verwiest ''gaast'' naor "heugte" en verwiest ''Rotster'' naor [[Rottum]]. Vrogger woonde d'r in dit gebied vissers die op de [[Kuunder]] veerden. Now is et veural richt op de laandbouw. Et karkhof mit ien van de [[klokkestoelen in Frieslaand]] leit op een heuveltien. 
+In de naeme verwiest ''gaast'' naor "heugte" en verwiest ''Rotster'' naor [[Rottum]]. Vrogger woonde d'r in dit gebied vissers die op de [[Kuunder (revier)|Kuunder]] veerden. Now is et veural richt op de laandbouw. Et karkhof mit ien van de [[klokkestoelen in Frieslaand]] leit op een heuveltien. 
 
 D'r bin gien schoelen, de kiender gaon in [[Jehannesge]] naor schoele. In de oolde schoele van Rotstergaast woont keunstener [[Alard Elout]].
 
@@ -13,7 +13,7 @@ D'r bin gien schoelen, de kiender gaon in [[Jehannesge]] naor schoele. In de ool
 *[[1973]] - 230
 *[[2004]] - 215
 
-[[Kattegerie:Stellingwarfs_artikel]]
+[[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Plak in Frieslaand]]
 
 [[en:Rotstergaast]]
