[[Kuunder]] → [[Kuunder (revier)|Kuunder]] (dat is [[Kuunder (revier)]])

--- a/Mildam.mw
+++ b/Mildam.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding: Map NL It Hearrenfean Mildaam.png|thumb|Mildam]]
-'''Mildam''' ([[Westlaauwers Frais|Fries]]: ''Mildaam'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Friesland]]. Et dörp leit in et oosten van [[Et Vene (plak)|Et Vene]] an de Schoterlaanseweg in een bosrieke omgeving en an de noordziede van de revier de [[Kuunder]]. 
+'''Mildam''' ([[Westlaauwers Frais|Fries]]: ''Mildaam'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Friesland]]. Et dörp leit in et oosten van [[Et Vene (plak)|Et Vene]] an de Schoterlaanseweg in een bosrieke omgeving en an de noordziede van de revier de [[Kuunder (revier)|Kuunder]]. 
 
 In Mildam zit de Tjongerschoele (basisonderwies) en de Ekokattedraal van [[Louis le Roy]]. Op et karkhof staot ok ien van de [[klokkestoelen in Frieslaand]].
 
@@ -18,19 +18,16 @@ Mildam is al ieuwen oold. Et leit op een zaandrogge, waor in et vere vleden al m
 <gallery>
 Image: Mildam bord 03c.JPG|Mildam
 Image: Ecokathedraal-Mildam-2003.jpg|Ekokattedraal
-</gallery>
-<gallery>
 Image: Klokkenstoel Mildam 09.JPG|Klokkestoel
 Image: De Tjongermolen Mildam 07.JPG|Tjongermeulen
 </gallery>
+{{Commonscat|Mildam}}
 
 ==Uutgaonde verwiezings==
 * [http://www.mildam.org/ Webstee van Mildam]
 * [http://www.erasmuspc.com/index.php?option=com_content&task=view&id=173&Itemid=83 Artikel over de Ekokattedraal van Louis le Roy op Erasmuspc, internationaol netwark veur steden en kultuur] (en)
 
-{{Commonscat|Mildam}}
-
-[[Kattegerie:Stellingwarfs_artikel]]
+[[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Plak in Frieslaand]]
 
 [[en:Mildam]]
