[[De Kuunder]] → [[De Kuunder (Stienwiekerlaand)|De Kuunder]] (dat is [[De Kuunder (Stienwiekerlaand)]])

--- a/Schoterziel.mw
+++ b/Schoterziel.mw
@@ -1,10 +1,10 @@
 '''Schoterziel''' ([[Nederlaands|Nederlaans]]: ''Schoterzijl'', [[Freesk|Fries]]: Skoattersyl) is een buurtschop in et zuden van de perveensie [[Frieslaand]], legen an de revier de [[Kuunder (revier)|Kuunder]].
 
-Et plakkien leit inkelde kilemeters stroomopweerts van [[De Kuunder]]. In feite bestaot et uut niet meer as een peer [[boerderieje|boerderi'jen]], een peer [[kefé]]s en een [[kamping]].
+Et plakkien leit inkelde kilemeters stroomopweerts van [[De Kuunder (Stienwiekerlaand)|De Kuunder]]. In feite bestaot et uut niet meer as een peer [[boerderieje|boerderi'jen]], een peer [[kefé]]s en een [[kamping]].
 
 Schoterziel leit op 'e greens van de perveensies Frieslaand, [[Oaveriessel|Overiessel]] en [[Flevolaand]]. Et dörpien ontleent heur naeme an de gelieknaemige sluus die in de tied van de [[Zuderzee]] een groot gedielte van Frieslaand van waeter ontlastte.
 
-[[Kattegerie:Stellingwarfs_artikel]]
+[[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Stellingwarven]]
 
 [[fy:Skoattersyl]]
