--- a/Veenkelonioals.mw
+++ b/Veenkelonioals.mw
@@ -56,7 +56,9 @@ t Sprekersaantel ligt om en bie 94.000 mìnzen, woarmit t Veenkelonioals t maist
 t Veenkelonioals wordt deur summege toalkundegen zain as n apaart dialekt en nait as dail van t Grunnegs. Messchain omdat t ook Drìntse invlouden het, zo as de -chie veur bepoalde verklainwoorden. t Het as SIL-kode: VEK.
 
 == Aigenschoppen ==
-n Typische aigenschop van t Veenkelonioals is t ìndegen op -e en de doar bie heurende klaankvarandern van de mitklinker derveur. Zo veraandert t [[Oldambtsters|Oldambtster]] woord "weeg" in t Veenkelonioals in "wege", "kaant" in "kaande", "oap" in "oabe" en "schaans" in "schaanze". Ook veraandert "plaank" in "plaanke", môr den wordt de "nk" oetsproken as "ng-kh", woarbie de "kh" de Duutse "g" veurstèlt. As zonnen woord vôlgd wordt deur n woord dij begunt mit n klinker of n h-, den vaalt de -e vot ien de oetsproak, môr de letter dij der veur komt, blieft wel, bv: "Hai sleug de kraande open", wordt oetsproken as "Hai sleug de kraandoo'm". De -e wordt wel schreven. n Aander aigenschop van t Veenkelonioals is t uutspreken van veul klanken en letters as neusklaanken. Ook de snìlhaid en t staarke aksìnt moaken t Veenkelonioals aigens. 
+n Typische aigenschop van t Veenkelonioals is t ìndegen op -e en de doar bie heurende klaankvarandern van de mitklinker derveur. Zo veraandert t [[Oldambtsters|Oldambtster]] woord "weeg" in t Veenkelonioals in "wege", "kaant" in "kaande", "oap" in "oabe" en "schaans" in "schaanze". Ook veraandert "plaank" in "plaanke", môr den wordt de "nk" oetsproken as "ng-kh", woarbie de "kh" de Duutse "g" veurstèlt. As zonnen woord vôlgd wordt deur n woord dij begunt mit n klinker of n h-, den vaalt de -e vot ien de oetsproak, môr de letter dij der veur komt, blieft wel, bv: "Hai sleug de kraande open", wordt oetsproken as "Hai sleug de kraandoo'm". De -e wordt wel schreven. n Aander aigenschop van t Veenkelonioals is t uutspreken van veul klanken en letters as neusklaanken. Ook de snìlhaid en t staarke aksìnt moaken t Veenkelonioals aigens. Ook "huus" en "uut" veur "hoes" en "oet" worden zain as typischheden van t Veenkelonioals.
+
+Doarnoast wordt t Veenkelonioals zain as t maist roege dialekt van t Grönnegs. Woar in t Noord Grönnegs "nij", "olle" en "doun" zègd wordt, zo wordt in t Veenkelonioals "nèj", "oale" en "daun" zègd. 
 
 === Verklainwoord ===
 Zo as al eer vermèld, wordt veur t [[verklainwoord]] onder aander -chie bruukt. Dit wordt allend bruukt as der in t [[Nederlaands]] n -e bie komt, bieveurbeeld bie "pannetje" > "pannechie". As t woord n körte klinker het, wordt t volgd deur -ie, bieveurbeeld "kopje" > "koppie". As t woord n laange of n stomme klinker op t ìnde het, wordt -(t)je bruukt, bieveurbeeld "koffertje" > "kovvertje". 
