--- a/Ni'jtriene.mw
+++ b/Ni'jtriene.mw
@@ -1,4 +1,4 @@
-'''Ni'jtriene''' ([[Nederlaands|Nederlaans]]: ''Nijetrijne'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]]. Et leit in et zuudwesten van [[Wolvege]], an de N351, tussen Wolvege en [[De Kuunder]], en het omdebi'j 60 inwoners (2004). Ni'jtriene leit midden in de [[Rottige Meenthe]].
+'''Ni'jtriene''' ([[Nederlaands|Nederlaans]]: ''Nijetrijne'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]]. Et leit in et zuudwesten van [[Wolvege]], an de N351, tussen Wolvege en [[De Kuunder (Stienwiekerlaand)|De Kuunder]], en het omdebi'j 60 inwoners (2004). Ni'jtriene leit midden in de [[Rottige Meente]].
 
 {{Weststellingwarf}}
 
