--- a/Rottige_Meente.mw
+++ b/Rottige_Meente.mw
@@ -4,7 +4,7 @@ Mit de Rottige Meente wodde vrogger een veul kleiner gebied in et zuden van [[Ni
 
 Om de [[grote vuurvlinder]] en de [[otter]] te bescharmen wodden in [[juni]] [[1955]] inkelde percelen ankocht. Daornao bin d'r nog verschillende dielen bi'jkommen, onder aandere in deur een ruulverkaeveling. Bi'j et vuuftigjaorig bestaon in [[2005]] had et risservaot een totaole oppervlakte van omdebi'j 1000 bunders. Petgatten en legakkers herinneren nog an de turfwinning. Et gebied bestaot veerder uut kleine gröslaandjes, [[trilvene]]n en [[veenmos]]rietlanen. De zeldzeme [[Gruunknolorchis]] is d'r te vienen.
 
-Et gebied leit tussen de [[revier]]ties [[Kuunder (revier)|Kuunder]] en [[Lende]] en wodt deursneden deur de [[Scheene]]. Et wodt in et westen begreensd deur de dörpen [[Munnikeburen]], [[Scharpenzeel (Frieslaand)|Scharpenzeel]] en [[Spange]]. Midden in et gebied leit [[Ni'jtriene]]. In de jaoren vuuuftig wodde dwars deur de Rottige Meente een weg anlegd, van [[Wolvege]] naor [[De Kuunder]] en de [[Noordoostpolder|Noordoostpoolder]]; de hudige N351 (Pieter Stuyvesantweg).
+Et gebied leit tussen de [[revier]]ties [[Kuunder (revier)|Kuunder]] en [[Lende]] en wodt deursneden deur de [[Scheene]]. Et wodt in et westen begreensd deur de dörpen [[Munnikeburen]], [[Scharpenzeel (Frieslaand)|Scharpenzeel]] en [[Spange]]. Midden in et gebied leit [[Ni'jtriene]]. In de jaoren vuuuftig wodde dwars deur de Rottige Meente een weg anlegd, van [[Wolvege]] naor [[De Kuunder (Stienwiekerlaand)|De Kuunder]] en de [[Noordoostpolder|Noordoostpoolder]]; de hudige N351 (Pieter Stuyvesantweg).
 
 [[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Netuur]]
