[[De Kuunder]] → [[De Kuunder (Stienwiekerlaand)|De Kuunder]] (dat is [[De Kuunder (Stienwiekerlaand)]])

--- a/Stellingwarver_taelwiezer.mw
+++ b/Stellingwarver_taelwiezer.mw
@@ -404,7 +404,7 @@ Regels veur de teengwoordige tied:
 |-
 |[[Gietern]]||''Giethoorn''
 |-
-|[[De Kuunder]]||''Kuinre''
+|[[De Kuunder (Stienwiekerlaand)|De Kuunder]]||''Kuinre''
 |-
 |[[Iesvene]]||''Eesveen''
 |-
