[[De Kuunder]] → [[De Kuunder (Stienwiekerlaand)|De Kuunder]] (dat is [[De Kuunder (Stienwiekerlaand)]])

--- a/1396.mw
+++ b/1396.mw
@@ -12,7 +12,7 @@ De volgende gebeurtenissen vunnen plaose in 't jaor '''1396''':
 == Gebeurtenissen ==
 * [[25 september]] - Bie de “Kruustoch van Nikópolis”, tegen de Osmaonse Turken dee 't koninkriek Hongarije bedreigen, wörd [[Jan zonder Vrees]], de troonopvolger van [[Bourgondië]], ontvoerd. Zien vaor [[Filips de Stoute]] möt veul losgeld betaolen.
 * 't [[Waddenailaand]] [[Amelaand (eilaand)|Amelaand]] kump an de graof van Hollaand. 't Zal laoter ([[15e eeuw]]) ressorteren onder de heerlijkheden van de heren Cammingha te [[Liwwadden (stad)|Leeuwarden]].
-* Graof Albrecht van Hollaand laand bie [[De Kuunder]] en verslaot de Friezen bie [[Schoterziel]].
+* Graof Albrecht van Hollaand laand bie [[De Kuunder (Stienwiekerlaand)|De Kuunder]] en verslaot de Friezen bie [[Schoterziel]].
 
 == Geboren ==
 * ...
