[[De Kuunder]] → [[De Kuunder (Stienwiekerlaand)|De Kuunder]] (dat is [[De Kuunder (Stienwiekerlaand)]])

--- a/Varve.mw
+++ b/Varve.mw
@@ -25,7 +25,7 @@ Varve wönnen veural vrogger zo emaak, disse pigmenten wönnen dan vermingd mit 
 * [[Stellingwarfs]]: ''varve''
 **''varve''
 **''vaarve''
-**''verve'' ([[De Kuunder]])
+**''verve'' ([[De Kuunder (Stienwiekerlaand)|De Kuunder]])
 *[[Veluws]]:
 **''varve''
 **''värve''
