--- a/Glaozemaker.mw
+++ b/Glaozemaker.mw
@@ -27,7 +27,7 @@ De prachtige [[kleur]]en vervullen belangrieke functies veur de glaozemaker. Ze 
 ** ''blainbieter''
 * [[Stellingwarfs]]:
 ** ''waeterjuffer''
-** ''oosterpeerdjen'' ([[Westhoekers]], [[De Kuunder]], [[Blankenham]])
+** ''oosterpeerdjen'' ([[Westhoekers]], [[De Kuunder (Stienwiekerlaand)|De Kuunder]], [[Blankenham]])
 * [[Tweants]]:
 ** ''libelle''
 ** ''glazenmaker''
